--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 <body class="noscript">
-  <div class="site-wrapper" data-state="slide-closed">
+  <div class="site-wrapper bg" data-state="slide-closed">
     <div class="sliding-canvas">
 
       <header class="header">
-        <h1>Push Menu</h1>
+        <h1>Awesome Nav!</h1>
 
           <!-- Menu Toggle Icon -->
         <a class="toggle-btn i-menu" href="#main-menu"><span>Menu</span></a>
